fix(forms): default check inputs alignment

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -599,7 +599,7 @@ $input-transition:                      border-color .15s ease-in-out, box-shado
 $form-text-margin-top:                  map-get($spacers, 2) !default;
 
 $form-check-input-gutter:               $spacer !default;
-$form-check-input-margin-y:             .3rem !default;
+$form-check-input-margin-y:             .15rem !default;
 $form-check-input-margin-x:             .25rem !default;
 
 $form-check-inline-margin-x:            .75rem !default;
